--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -381,6 +381,13 @@
 
 
 #### 7.4 最后的抢救
+- 举一个场景例子
+    - 比如在onCreate方法中，虽然我们捕获住了异常，但程序的执行也被中断了，界面的绘制可能无法完成，点击事件的设置也没有生效。
+    - 这就导致了 app 虽然没有退出，但用户却无法操作的问题，这种情况似乎还不如直接 Crash 了呢。
+    - 因此安全气囊应该支持动态配置(接口下发或者阿波罗配置)，注意：只处理那些非主流程的操作，比如点击按钮触发的崩溃，或者一些打点等对用户无感知操作造成的崩溃。
+- 如何做一些崩溃异常后的补救
+    - 第一步：当异常发生时捕获异常。匹配异常堆栈是否符合配置(堆栈的集合配置)，如果符合则捕获，否则交给默认处理器处理。
+    - 第二步：判断异常发生时是否是主线程，如果是则重启Looper。主要是使用while循环开发loop操作。
 - Android Crash 最后的抢救
     - https://mp.weixin.qq.com/s/91CsBU57BubJtRUdfmkPgw
 
