--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -19,7 +19,7 @@
 - OOM是什么？有哪些场景会造成OOM，如何解决？那么Oom是否可以try catch？为什么？
 - 内存泄漏是什么？ 如何防止线程的内存泄漏？ Java多线程引发的性能问题，怎么解决？ 如何对Android 应用进行性能分析以及优化? 
 - activity有个内部类handler，描述下引用关系链路，并说明为何gcRoots能访问到activity
-
+- 鲁班压缩：图片压缩一般怎么做的？如何理解质量压缩？如何理解采样率压缩，采样率怎么计算？鲁班有哪些设计巧妙的地方？
 
 
 ### 02.崩溃相关问题汇总
