--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -170,10 +170,11 @@
 ### 12.JetPack相关问题
 - LiveData：连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
 - LiveData：核心设计思想是什么？如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
+- LiveData：连续三次postValue数据，
 - ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
 - ViewModel：源码实现，它在Activity重启后为什么恢复数据？数据保存在哪里？和onSaveInstanceState有啥区别？
 - ViewModel：是怎么和 View 之间怎么绑定的？如何通讯。充当业务逻辑层，如果两个模块逻辑一样，只是 UI 不一样，如何保证复用？
-
+- ViewModel：如何
 
 
 ### 13.Android编译问题
