--- a/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
+++ b/Read/ReadMeWiki/09.问题分析/04.Android性能优化.md
@@ -14,11 +14,9 @@
 
 
 ### 01.内存相关问题汇总
-- 内存泄漏常见的有哪几种？如何检测？LeakCanary原理，Activity、Fragment
-- 说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
-- OOM是什么？有哪些场景会造成OOM，如何解决？那么Oom是否可以try catch？为什么？
-- 内存泄漏是什么？ 如何防止线程的内存泄漏？ Java多线程引发的性能问题，怎么解决？ 如何对Android 应用进行性能分析以及优化? 
-- activity有个内部类handler，描述下引用关系链路，并说明为何gcRoots能访问到activity
+- 四种引用：说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+- OOM：OOM是什么？有哪些场景会造成OOM，如何解决？那么Oom是否可以try catch？为什么？如何治理OOM？
+- 引用链路：activity有个内部类handler，描述下引用关系链路，并说明为何gcRoots能访问到activity
 - 鲁班压缩：图片压缩一般怎么做的？如何理解质量压缩？如何理解采样率压缩，采样率怎么计算？鲁班有哪些设计巧妙的地方？
 
 
@@ -39,10 +37,10 @@
 
 
 ### 04.ANR相关问题汇总
-- ANR基础：
-- ANR监控：
-- ANR查看：
-- ANR解决：ANR如何解决，trace.txt如何看？
+- ANR基础：究竟是什么是ANR？ANR产生条件是什么？说一下触发场景Activity的ANR流程？那些极端情况不会ANR？
+- ANR监控：ANR是如何监控，其设计思路是什么？FileObserver和WatchDog监听ANR分别有什么特点？
+- ANR查看：ANR是如何查看？trace.txt如何看？提取ANR中那些重要的信息？
+- ANR解决：造成ANR的原因可能有哪些？碰到过哪一种ANR，具体是怎么解决的？
 
 
 
