--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -86,6 +86,7 @@
 - volatile：volatile这个关键字是怎么理解的？在并发环境中如何确保程序的可见性、顺序性和一致性？
 - Synchronized：谈谈对Synchronized关键字，类锁，方法锁，重入锁的理解？有哪些使用场景？说一下锁如何升级和降级。
 - 锁比较：Lock锁比synchronized块的优势是什么？各自用途是什么？有哪些不同点？
+- 锁概念：公平锁/非公平锁如何理解？乐观锁/悲观锁如何理解？偏向锁/轻量级锁/重量级锁是如何理解？互斥锁/读写锁如何理解？
 - 多线程规则：如何理解同步，异步，阻塞，非阻塞的概念。如何实现异步线程串列执行？
 - 死锁：活锁和死锁有什么区别？什么是死锁(Deadlock)？导致线程死锁的原因？如何确保 N 个线程可以访问 N 个资源同时又不导致死锁？
 - CAS乐观锁：什么是乐观锁？如何实现乐观锁？如何避免ABA问题？CAS乐观锁是如何实现的？CAS的问题有哪些？
@@ -153,9 +154,9 @@
 
 ### 12.其他知识问题
 - 加解密：加解密有哪些方式？对称加密有哪些，使用场景是什么？非对称加密有哪些，使用场景是什么？如何理解单向加密？
-- MD5：用途是什么？应用场景有哪些？如何增强md5的安全性？
+- MD5：用途是什么？应用场景有哪些？如何增强md5的安全性？md5的算法大概是什么样的？如何设计一款算法？
 - Base64：base64是加密算法吗？那些场景使用base64？它的本质是什么？它编码的好处是什么？为何说base64处理的数据有利于多设备传输？ASCII不可见字符有哪些？
-- 四种引用：为何需要四种引用？说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
+- 四种引用：为何需要四种引用？说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？引用队列如何理解？
 - 强引用：如何回收强引用？强引用有何特点？将对象引用赋值为null有何意义？将引用设置成null后jvm什么时候回收对象呢？
 - 软引用：软引用的使用场景？如何判断内存空间是否足够？可能被回收，Jvm是如何处理软引用队列的回收逻辑？注意点有什么？
 - 弱引用：弱引用有何特点？垃圾回收器如何处理弱引用回收策略？软引用和弱引用如何选择？
