--- a/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
@@ -28,7 +28,8 @@
     - 算法5：找出常用数字，给你一个长度为n的数组，其中有一个数字出现的次数至少为n/2，找出这个数字。比如输入: [1,1,1,2,5,7,8,8,8,8,10]，输出: 8
     - 算法6：调整奇数和偶数顺序，输入一个整数数组，实现一个函数来调整该数组中数字的顺序，使得所有奇数位于数组的前半部分，所有偶数位予数组的后半部分。比如[1,3,4,5,6,8,2]，输出[1,3,5,4,6,8,2]
     - 算法7：最小的第K个数，输入n个整数，找出其中最小的k个数。例如输入4 、5 、1、6、2、7、3 、8 ，这8个数字，则最小的4个数字是1、2、3、4
-    - 算法8：数组中重复的数字，例如，如果输入长度为7的数组{2,3,1,0,2,5,3}，那么对应的输出是重复的数字2或者3。
+    - 算法8：数组中重复的数字，例如，如果输入长度为7的数组{2,3,1,0,2,5,3}，那么对应的输出是重复的数字2或者3
+
 
 
 ### 02.链表相关问题
@@ -66,8 +67,9 @@
 - HashMap：HashMap的实现机制，底层数据结构是什么？如果Hash冲突了怎么解决？HashMap的put方法的具体流程？怎么样HashMap线程安全？
 - HashMap：HashMap扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
 - HashMap：为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
-- ConcurrentHashMap：ConcurrentHashMap的具体实现知道吗？如何实现高效地线程安全？ConcurrentHashMap是如何实现分段锁？
-- TreeMap：TreeMap 是采用什么树实现的？TreeMap、HashMap、LindedHashMap的区别。
+- ConcurrentHashMap：ConcurrentHashMap的具体实现知道吗？如何实现高效地线程安全？如何实现分段锁？
+- TreeMap：TreeMap 是采用什么树实现的？TreeMap、HashMap、LandedHashMap的区别。
+- LinkedHashMap：它是如何实现有序？它是如何实现淘汰数据的？put和get分别做了什么操作？
 
 
 
