--- a/Read/ReadMeWiki/00.方案实践/14.FPS检测设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/14.FPS检测设计实践.md
@@ -81,13 +81,16 @@
 
 
 #### 2.2 什么是FPS
-- 在 Android 中，每一帧的绘制时间不要超过 16.67ms。那么，这个 16.67ms 是怎么来的呢？就是由 FPS 决定的。FPS，Frame Per Second，每秒显示的帧数，也叫 帧率。
-- 监测 FPS 在一定程度上可以反应应用的卡顿情况，原理也很简单，但前提是你对屏幕刷新机制和绘制流程很熟悉。让我们先从 View.invalidate() 说起。
+- 在 Android 中，每一帧的绘制时间不要超过 16.67ms。那么，这个 16.67ms 是怎么来的呢？
+    - 就是由 FPS 决定的。FPS，Frame Per Second，每秒显示的帧数，也叫 帧率。
+- 监测 FPS 在一定程度上可以反应应用的卡顿情况
+    - 原理也很简单，但前提是你对屏幕刷新机制和绘制流程很熟悉。让我们先从 View.invalidate() 说起。
 
 
 
 #### 2.3 View.invalidate()
-- 要探究屏幕刷新机制和 View 绘制流程，View.invalidate() 无疑是个好选择，它会发起一次绘制流程。然后开始分析invalidate()调用链路
+- 要探究屏幕刷新机制和 View 绘制流程
+    - View.invalidate() 无疑是个好选择，它会发起一次绘制流程。然后开始分析invalidate()调用链路
 - 在View这个类中，调用的代码链路是：
     - void invalidate()
     - void invalidate(boolean invalidateCache)
