--- a/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
@@ -31,8 +31,9 @@
     - 5.4 异步线程管理
     - 5.5 线程绑定生命周期
     - 5.6 排查线程CPU使用率飙升
-- 06.合理设置线程优先级
+- 06.优化线程的使用
     - 6.1 设置线程优先级方式
+    - 6.2 避免Thread直接创建
 - 07.线程卡顿是怎么回事
     - 7.1 线程如何卡顿
     - 7.2 如何模拟线程卡顿
@@ -43,9 +44,10 @@
 
 ### 01.线程优化的背景
 #### 1.1 实践背景说明
-- 1.编译器自带的profiler工具显示项目在启动阶段有上百个线程被创建，这么多的线程真的都是由App创建的吗？
-- 2.过多的线程不仅仅带来了内存上的消耗同时也降低了cpu调度的效率，过多的cpu调度带来的消耗的坏处甚至超过了多线程带来的好处。
-- 3.每个设备能够创建的线程数是有限的，创建的线程数超限就会发生崩溃。为解决线程数超限带来的崩溃问题就需要降低线程的个数，既然需要降低线程的个数，那需要查找线程的来源。
+- 说一下背景
+    - 1.编译器自带的profiler工具显示项目在启动阶段有上百个线程被创建，这么多的线程真的都是由App创建的吗？
+    - 2.过多的线程不仅仅带来了内存上的消耗同时也降低了cpu调度的效率，过多的cpu调度带来的消耗的坏处甚至超过了多线程带来的好处。
+    - 3.每个设备能够创建的线程数是有限的，创建的线程数超限就会发生崩溃。为解决线程数超限带来的崩溃问题就需要降低线程的个数，既然需要降低线程的个数，那需要查找线程的来源。
 
 
 
@@ -101,7 +103,7 @@
 
 #### 2.3 使用线程池管理线程
 - 因为在系统中创建线程是一个比较耗费资源的事, 所以不能频繁创建和释放线程, 因此在效率上考虑通常会使用线程池, 同时也便于线程的管理。
-    - Android中的AsyncTask就使用了线程池。
+    - Android中的AsyncTask就使用了线程池。建议封装简单型的线程池库，主要是处理cpu，io，ui级相关的业务逻辑。
 
 
 #### 2.4 常规解决方案
@@ -113,9 +115,13 @@
 
 
 #### 2.5 线程改造方案
-- 方案1：使用统一的线程池，不要手动创建线程，将项目中使用线程的地方替换成线程池，最好一个项目中只有一个线程池。
-- 方案2：对于三方库创建的线程，如果三方库有替换线程的接口，则可以将三方库创建的线程替换成统一的线程池。如果三方库没有替换线程的接口，可以把三方库的源码下载下来，直接修改源码，然后将修改后的源码上传到公司的仓库。
-- 方案3：可以使用字节码插桩的方式将项目中的线程替换成统一的线程池，这个一下子搞不定，而且成本会比较高，需要经过严格的线下测试。
+- 方案1：使用统一的线程池
+    - 不要手动创建线程，将项目中使用线程的地方替换成线程池，最好一个项目中只有一个线程池。
+- 方案2：对于三方库创建的线程，如果三方库有替换线程的接口，则可以将三方库创建的线程替换成统一的线程池。
+    - 如果三方库没有替换线程的接口，可以把三方库的源码下载下来，直接修改源码，然后将修改后的源码上传到公司的仓库。
+- 方案3：使用字节码方案统一线程
+    - 可以使用字节码插桩的方式将项目中的线程替换成统一的线程池，这个一下子搞不定，而且成本会比较高，需要经过严格的线下测试。
+
 
 
 #### 2.6 线程改造的计划
@@ -350,7 +356,7 @@
 
 
 
-### 06.合理设置线程优先级
+### 06.优化线程的使用
 #### 6.1 设置线程优先级方式
 - 在 Android 中，有两种常见的设置线程优先级的方式：
     - 第一种，使用 Thread 类实例的 setPriority 方法，来设置线程优先级。
@@ -358,6 +364,13 @@
 - 这两种设置线程的优先级，一种是 Java 原生版本，另一种是 Android API 版本。
     - 这两种方式是不同的，Android 更推荐使用第二种方式。
 - https://blog.csdn.net/u011578734/article/details/110549238
+
+
+
+
+#### 6.2 避免Thread直接创建
+
+
 
 
 ### 07.线程卡顿是怎么回事
