--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -12,18 +12,19 @@
 
 ### 01.Android经典问题
 - 组件化：module A 和 module B 之间有需要调用 Api 这块怎么解决的？module A 和 module B 之间如何通讯？
-- 崩溃专题：崩溃治理，崩溃监听，崩溃原理，以及捕获。
+- 崩溃专题：崩溃治理，崩溃监听，崩溃原理，以及捕获崩溃异常。崩溃降级。
 - ANR专题：ANR原理，信息收集，分析，监控，治理。造成ANR原因有哪些，如何解决的？
-- 卡顿专题：卡顿原因，卡顿监控，卡顿治理，
-- 网络专题：网络优化，弱网，监控。如何抓包，放抓包处理等等
+- 卡顿专题：卡顿原因，卡顿监控，卡顿治理，说一下卡顿治理的优化措施
+- 网络专题：网络优化，弱网，监控。如何抓包，放抓包处理等等，避免网络拦截
 - 内存专题：内存监控，内存治理，内存如何分配。内存泄漏怎么排查，平常有做过哪些内存优化相关的工作？
 - 启动专题：启动优化，页面打开优化，统计耗时。App启动过程有哪些优化？
 - 稳定性专题：稳定性优化，做了那些稳定性工作，hook疑难问题解决？
 - 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包
 - 图片专题：图片优化，大图检测，大图加载，图片加载流程，如何减少图片占用内存，图片圆角处理
-- OOM专题：OOM是如何产生，OOM场景，OOM如何优化，OOM排查思路
-- FPS专题：
-- UI优化：
+- OOM专题：OOM是如何产生，OOM场景，OOM如何优化，OOM排查思路，OOM是如何监控
+- FPS专题：通过invalidate说一下屏幕刷新机制？什么是流畅度？说一下Choreographer作用，VSYNC信号理解？FPS监控设计如何做？
+- UI优化：布局检测工具有哪些？如何统计布局的损耗？源码如何加载xml布局？布局卡顿优化
+- 进程专题：系统为什么会杀掉进程？进程回收优先级？app切换到后台后为什么容易被杀死？系统杀的为什么是我的进程，这是按照什么标准来选择的？
 - 线程专题：
 - IPC专题：
 - 四大组件：
