--- a/Read/ReadMeWiki/01.大型方案/09.IPC跨进程通信实践.md
+++ b/Read/ReadMeWiki/01.大型方案/09.IPC跨进程通信实践.md
@@ -30,6 +30,7 @@
 
 
 
+
 ### 01.整体概述
 #### 1.1 项目背景
 - 进程之间如何通信
@@ -39,9 +40,12 @@
 
 
 #### 1.3 基础概念
-- IPC（Inter-Process Communication）的含义即为进程间通信或者翻译为跨进程通信，是指两个进程之间进行数据交换的过程。
-- 一般情况下，在 Android系统中一个应用就只享有一个进程，在最简单的情况下一个进程可以只包含有一个线程（当然，一般情况下是不可能的），即主线程，也称为 UI 线程
-- 有时候应用因为某些原因需要采用多进程模式，此时如果要在应用内的不同进程间进行通信，就需要使用到 IPC 机制。或者是两个不同的应用需要进行数据交换，此时也一样需要依靠 Android 系统提供的 IPC 方案
+- IPC（Inter-Process Communication）
+    - 含义即为进程间通信或者翻译为跨进程通信，是指两个进程之间进行数据交换的过程。
+- 一般情况下，在 Android系统中一个应用就只享有一个进程
+    - 在最简单的情况下一个进程可以只包含有一个线程（当然，一般情况下是不可能的），即主线程，也称为 UI 线程
+- 有时候应用因为某些原因需要采用多进程模式
+    - 此时如果要在应用内的不同进程间进行通信，就需要使用到 IPC 机制。或者是两个不同的应用需要进行数据交换，此时也一样需要依靠 Android 系统提供的 IPC 方案。
 
 
 
@@ -61,7 +65,8 @@
     - 服务端，创建Service用于监听客户端的连接请求，然后创建一个AIDL接口文件，里面是将要实现的方法，注意这个方法是暴露给客户端的的，**在Service中实现这个AIDL接口即可**。
     - 客户端，先绑定服务端Service，绑定成功后，将服务端返回的Binder对象转换成AIDL接口所属的类型，最后调用AIDL的方法就可以了。
 - 使用ContentProvider
-    - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
+    - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。
+    - ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
 
 
 
