--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -25,8 +25,8 @@
 - FPS专题：通过invalidate说一下屏幕刷新机制？什么是流畅度？说一下Choreographer作用，VSYNC信号理解？FPS监控设计如何做？
 - UI优化：布局检测工具有哪些？如何统计布局的损耗？源码如何加载xml布局？布局卡顿优化
 - 进程专题：系统为什么会杀掉进程？进程回收优先级？app切换到后台后为什么容易被杀死？系统杀的为什么是我的进程，这是按照什么标准来选择的？
-- 线程专题：
-- IPC专题：
+- 线程专题：如何做线程优化？如何统一线程调用？有哪些可以做异步任务的方式？线程CPU排查，线程卡顿。
+- IPC专题：跨进程通信方案，AIDL是如何实现的？如何理解死亡代理，
 - 四大组件：
 - 弹窗专题：
 - WMS专题：
