--- a/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
+++ b/Read/ReadMeWiki/00.方案实践/26.线程优化实践操作.md
@@ -155,6 +155,11 @@
     - Android 系统为开发人员提供了一个异步任务类（AsyncTask）来实现上面所说的功能，即它会在一个子线程中执行计算任务，同时通过主线程的消息循环来获得更新应用程序界面的机会。
 
 
+#### 3.3 如何理解多线程
+- 为什么会有多线程：
+    - 因为并行执行多任务
+
+
 #### 3.4 线程交互Handler
 - 在Android当中, 工作线程主要通过Handler机制来访问UI线程。
     - 当然还有一些封装好的类例如AsyncTask可以使用, 但是本质仍是使用Handler。
@@ -252,8 +257,7 @@
     - 灵活性高，可以自由控制线程数量。
     - 扩展性好，可以根据实际需要进行扩展。
 - 缺点：
-    - 代码略显复杂。
-    - 线程池本身对系统资源有一定消耗。
+    - 代码略显复杂。线程池本身对系统资源有一定消耗。
     - 当线程数过多时，线程之间的切换成本会有很大开销，从而使性能严重下降。
     - 每个线程都会耗费至少 1040KB 内存，线程池的线程数量需要控制在一定范围内。
     - 线程的优先级具有继承性，如果在 UI 线程中创建线程池，线程的默认优先级会和 UI 线程相同，从而对 UI 线程使用资源进行抢占。
@@ -339,23 +343,6 @@
 
 
 
-- 思考一些问题
-    - 了解了如何创建线程，来执行异步任务，那么如果大量的使用线程，会不会影响 UI 线程呢？会不会产生卡顿呢?答案是肯定的。
-    - 因为用户手机的 CPU 资源是有限的，内存也是有限的，如果无节制的同一时刻创建的大量的线程，就会导致线程和 UI 线程同时抢占 CPU 资源，造成 UI 线程执行变慢，产生卡顿等问题；
-    - 并且线程创建是有代价的，线程不但占用了大量的 CPU 资源，同时也占用了大量的内存资源，Android 在真正创建线程时，会为每个线程申请 1040KB 的内存资源，大量的线程就有可能导致 OOM 等问题。
-    - 另外，线程的创建和销毁也会占用系统资源来执行，所以应该合理的使用线程。
-- 如何高效的使用线程
-    - 将异步任务分类，根据任务的紧急程度，使用不同优先级的线程来执行。
-    - 将紧急任务，交给优先级高的线程来执行，并且要注意，线程不能产生长时间阻塞，否则会影响后续任务的执行。
-    - 将不紧急任务，交给低优先级线程来执行，并且控制线程数量，少量线程，慢慢执行即可。例如，可以创建一个类似于 AnsyncTask 的全局的单线程任务队列，使用 1 个线程来执行一些不紧急的任务。
-    - 使用线程池来优化线程的创建和管理线程。我们可以使用线程池来全局的管理线程的创建和执行，以此来避免频繁的线程创建和销毁，提高系统的性能。
-    - 不要使用默认的线程优先级。通常，新创建的线程的线程优先级，默认情况下继承了父线程的线程优先级的，例如，在 UI 线程中创建了一个子线程，那么子线程的线程优先级就和 UI 线程是相同的。
-    - 尽可能的将线程优先级级别设置的低一些，以避免子线程和 UI 线程竞争 CPU 资源。
-    - 设置线程优先级时，应注意线程优先级的设置方法。
-
-
-
-
 ### 06.优化线程的使用
 #### 6.1 设置线程优先级方式
 - 在 Android 中，有两种常见的设置线程优先级的方式：
@@ -381,6 +368,25 @@
 
 
 #### 7.3 如何解决线程卡顿
+
+
+
+
+
+
+- 思考一些问题
+    - 了解了如何创建线程，来执行异步任务，那么如果大量的使用线程，会不会影响 UI 线程呢？会不会产生卡顿呢?答案是肯定的。
+    - 因为用户手机的 CPU 资源是有限的，内存也是有限的，如果无节制的同一时刻创建的大量的线程，就会导致线程和 UI 线程同时抢占 CPU 资源，造成 UI 线程执行变慢，产生卡顿等问题；
+    - 并且线程创建是有代价的，线程不但占用了大量的 CPU 资源，同时也占用了大量的内存资源，Android 在真正创建线程时，会为每个线程申请 1040KB 的内存资源，大量的线程就有可能导致 OOM 等问题。
+    - 另外，线程的创建和销毁也会占用系统资源来执行，所以应该合理的使用线程。
+- 如何高效的使用线程
+    - 将异步任务分类，根据任务的紧急程度，使用不同优先级的线程来执行。
+    - 将紧急任务，交给优先级高的线程来执行，并且要注意，线程不能产生长时间阻塞，否则会影响后续任务的执行。
+    - 将不紧急任务，交给低优先级线程来执行，并且控制线程数量，少量线程，慢慢执行即可。例如，可以创建一个类似于 AnsyncTask 的全局的单线程任务队列，使用 1 个线程来执行一些不紧急的任务。
+    - 使用线程池来优化线程的创建和管理线程。我们可以使用线程池来全局的管理线程的创建和执行，以此来避免频繁的线程创建和销毁，提高系统的性能。
+    - 不要使用默认的线程优先级。通常，新创建的线程的线程优先级，默认情况下继承了父线程的线程优先级的，例如，在 UI 线程中创建了一个子线程，那么子线程的线程优先级就和 UI 线程是相同的。
+    - 尽可能的将线程优先级级别设置的低一些，以避免子线程和 UI 线程竞争 CPU 资源。
+    - 设置线程优先级时，应注意线程优先级的设置方法。
 
 
 
