--- a/Read/ReadVideoWiki/01.原理知识/06.MP4文件解析流程.md
+++ b/Read/ReadVideoWiki/01.原理知识/06.MP4文件解析流程.md
@@ -6,7 +6,8 @@
 
 
 ### 01.视频播放背景说明
-- 以最常见的MP4文件入手。然后会简短的介绍一个标准的播放器的启动，解析，播放流程。比如Exoplayer，谷歌的分包策略就是根据播放器的组件来分包。
+- 以最常见的MP4文件入手。
+    - 然后会简短的介绍一个标准的播放器的启动，解析，播放流程。比如Exoplayer，谷歌的分包策略就是根据播放器的组件来分包。
 - 理解好每个基础概念。Mp4格式文件的构成；Mp4头文件的构成；标准播放器的启动流程；在线视频播放的技术基础(online video streaming)
 
 
