--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -26,18 +26,7 @@
 - UI优化：布局检测工具有哪些？如何统计布局的损耗？源码如何加载xml布局？布局卡顿优化
 - 进程专题：系统为什么会杀掉进程？进程回收优先级？app切换到后台后为什么容易被杀死？系统杀的为什么是我的进程，这是按照什么标准来选择的？
 - 线程专题：如何做线程优化？如何统一线程调用？有哪些可以做异步任务的方式？线程CPU排查，线程卡顿。
-- IPC专题：跨进程通信方案，AIDL是如何实现的？如何理解死亡代理，
-- 四大组件：
-- 弹窗专题：
-- WMS专题：
-- AMS专题：
-- PMS专题：
-- View专题：
-- 事件专题：
-- 消息机制：
-- 数据专题：
-- 动画专题：
-- 架构设计：
+- IPC专题：跨进程通信方案，AIDL是如何实现的？如何理解死亡代理，Binder机制，Binder流程原理
 
 
 
@@ -62,8 +51,7 @@
 
 
 ### 03.作业帮项目问题汇总
-- 音视频通话：
-- 音视频通话：
+- 音视频通话：如何设计音视频业务？为什么说这块业务很复杂，复杂在哪里？
 - Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？如何保证数据时效性？
 - Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
 - Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
@@ -81,22 +69,21 @@
 
 
 ### 04.滴滴项目问题汇总
-- 地图组件化：组件化如何实现？
-- Flutter跨端：
-- Flutter插件开发：
-- Mock工具：
-- App状态监听：
-- 隐私合规：
+- 组件化：组件化如何实现？组件化如何进行分层设计？组件化如何通信？组件化路由跳转的原理？遇到那些问题？
+- Flutter跨端：跨端是怎么做的？三棵树如何理解？如何做引擎复用，遇到过什么问题，是怎么解决的？
+- Flutter插件开发：如何做flutter插件开发？什么场景下使用？插件的设计思想是什么？
+- App状态监听：如何做App网络，GPS，定位，Wi-Fi等状态监听？广播监听的原理是什么？
+- 隐私合规：如何做隐私合规处理？如何处理权限合规？如何避免隐私API合规？如何做敏感信息控频优化？合规是如何测试？
 
 
 
 ### 05.大搜车项目问题汇总
 - 视频播放器：
 - 视频缓存：
-- 视频优化：
-- 组件化：
+- 视频优化：做过那些视频优化工作？是否有做过视频监控方案？播放性能优化是怎么做的？
+- 视频View：SurfaceView和TextureView有什么区别？它们绘制的原理是什么？那个性能更好，为什么？
 - 网络拦截助手：
-- 组件化通信：
+- 组件化通信：ARouter实现原理是什么？设计思路是什么？
 
 
 
