--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -20,55 +20,30 @@
 
 
 ### 01.四大组件问题汇总
-#### 1.0 App启动
 - App进程：说一下App进程启动流程？Zygote进程的启动流程是什么样的？关于Zygote进程主要做了那些事情？
 - App进程：SystemServer进程启动流程是什么样的？怎么创建单个进程(application)？如何启动ActivityThread？
 - 启动入口：ActivityThread启动入口做了什么？如何创建上下文？为什么要创建上下文。说一下主线程创建时机？
 - 启动流程：说一下application的启动流程，何时创建，什么时候调用onCreate和attachBaseContext方法？
 - 启动顺序：Application中attachBaseContext方法，onCreate方法和ContentProvider中的onCreate方法执行的顺序是什么？
 - Activity启动流程：其中考察最多的类似问题是：从桌面点击一个图标之后，到界面显示，这个过程发生了什么？
-
-
-
-#### 1.1 Activity
-- 启动模式：也就是常见的四种启动模式，面试官更喜欢问何时使用他们，也就是使用场景。从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
-- 生命周期：onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
-- 异常生命周期：简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
-- onNewIntent()调用时机？onNewIntent()具体有什么作用？Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
-- 直接在Activity中创建一个thread跟在service中创建一个thread之间恩区别
-- 由A启动BActivity，A为栈内复用模式，B为标准模式，然后再次启动A或者杀死B，说说A，B的生命周期变化，为什么？
-- 谈谈Activity的四种启动模式，SingleTop和SingleTask启动模式的应用场景
-
-
-#### 1.2 Service
-- Activity如与Service通信？Service的生命周期与启动方法由什么区别？Service先start再bind如何关闭service，为什么bindService可以跟Activity生命周期联动？
-- 如何启动其他应用的Activity？在此过程中主要做了什么？
-- 一个Activity先start一个Service后，再bind时会回调什么方法？此时如何做才能回调Service的destory()方法？
-- 用过哪些系统Service？是否能在Service进行耗时操作？如果非要可以怎么做？
-- 前台服务是什么？和普通服务的不同？如何去开启一个前台服务？如何去做保活？
-- bindService是一个异步的过程吗？绑定service大概需要经历那些过程？
-- 直接在Activity中创建一个thread跟在service中创建一个thread之间恩区别
-
-
-
-#### 1.3 BroadcastReceiver
-- 广播有哪些注册方式？有什么区别？广播发送和接收原理是什么？
-- 广播传输的数据是否有限制，是多少，为什么要限制？ContentProvider、ContentResolver与ContentObserver之间的关系是什么？
-- BroadcastReceiver与LocalBroadcastReceiver有什么区别？LocalBroadcastReceiver 是应用内广播，那么它是怎么实现的？
-- 如何通过广播拦截和abort一条短信；广播是否可以请求网络；广播引起anr的时间限制？广播中怎么进行网络请求?
-
-
-#### 1.4 ContentProvider
-- Android系统为什么会设计ContentProvider，ContentProvider 是如何实现数据共享的?请说一下进程共享和线程安全问题……
-- 简单说一下ContentProvider的权限管理(读写分离，权限控制-精确到表级，URL控制)
-
-
-#### 1.5 Fragment
-- 在fragment中为什么有时getActivity()会为null？Fragment试图为什么有的时候会重叠，怎么产生的，又如何解决？
-- Fragment是如何做懒加载的？有那几个重要的方法？如何实现？setUserVisibleHint()方法什么时候调用？
-- 如果在onStop的时候做了网络请求，onResume的时候怎么恢复？
-- Fragment的replace和add的区别？用Fragment有遇过什么坑吗，怎么解决 ？
-- getFragmentManager，getSupportFragmentManager ，getChildFragmentManager三者之间的区别 ?
+- Activity启动模式：也就是常见的四种启动模式，面试官更喜欢问何时使用他们，也就是使用场景。从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
+- Activity生命周期：onStart()和onResume()/onPause()和onStop()的区别？并且这几个方法在那种场景下用到，具体有什么作用？
+- Activity异常生命周期：简单说一下这些方法是做什么用的？onSaveInstanceState()方法？何时会调用？onSaveInstanceState()与onPause()的区别？如何避免配置改变时Activity重建？
+- Activity#onNewIntent：onNewIntent()调用时机？onNewIntent()具体有什么作用？Activity遵循什么设计模式？知道ActivityThread这个类是干什么用的吗？
+- Service：Activity如与Service通信？Service的生命周期与启动方法由什么区别？Service先start再bind如何关闭service，为什么bindService可以跟Activity生命周期联动？
+- Service：一个Activity先start一个Service后，再bind时会回调什么方法？此时如何做才能回调Service的destroy()方法？
+- Service前台服务：前台服务是什么？和普通服务的不同？如何去开启一个前台服务？如何去做保活？
+- Service绑定服务：bindService是一个异步的过程吗？绑定service大概需要经历那些过程？是否能在Service进行耗时操作？
+- Receiver：广播有哪些注册方式？有什么区别？广播发送和接收原理是什么？广播传输的数据是否有限制，是多少，为什么要限制？
+- BroadcastReceiver：广播原理是什么？如何进行数据传递？广播跨进程实现的方案是什么？
+- Receiver案例分析：BroadcastReceiver与LocalBroadcastReceiver有什么区别？LocalBroadcastReceiver 是应用内广播，那么它是怎么实现的？
+- Receiver案例分析：如何通过广播拦截和abort一条短信；广播是否可以请求网络；广播引起anr的时间限制？广播中怎么进行网络请求?
+- ContentProvider：为什么会设计ContentProvider，ContentProvider 是如何实现数据共享的?请说一下进程共享和线程安全问题……
+- ContentProvider：说一下初始化流程，简单说一下ContentProvider的权限管理(读写分离，权限控制-精确到表级，URL控制)
+- Fragment原理：Fragment设计原理是什么？replace和add的区别？用Fragment有遇过什么坑吗，怎么解决 ？
+- Fragment案例：Fragment是如何做懒加载的？有那几个重要的方法？如何实现？setUserVisibleHint()方法什么时候调用？
+- Fragment分析：如果在onStop的时候做了网络请求，onResume的时候怎么恢复？
+- Fragment案例：在fragment中为什么有时getActivity()会为null？Fragment试图为什么有的时候会重叠，怎么产生的，又如何解决？
 
 
 
@@ -171,10 +146,8 @@
 - LiveData：连续set两个相同的数据，会收到几次；连续post两个相同的数据，会收到几次；liveData能在子线程接收么？
 - LiveData：核心设计思想是什么？如何实现双向绑定。View 到 Model，Model 到 View 如何实现绑定？
 - LiveData：连续三次postValue数据，
-- ViewModel：如何实现Activity旋转之后，依旧能恢复数据的？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
-- ViewModel：源码实现，它在Activity重启后为什么恢复数据？数据保存在哪里？和onSaveInstanceState有啥区别？
-- ViewModel：是怎么和 View 之间怎么绑定的？如何通讯。充当业务逻辑层，如果两个模块逻辑一样，只是 UI 不一样，如何保证复用？
-- ViewModel：如何
+- ViewModel：如何实现Activity旋转之后，依旧能恢复数据的，如何保证model不变？ViewModel 如何绑定不同的页面？ViewModel 是单向绑定还是双向绑定？
+- ViewModel：是怎么和 View 之间怎么绑定的？充当业务逻辑层，如果两个模块逻辑一样，只是 UI 不一样，如何保证复用？如何实现ViewModel单利对象？
 
 
 ### 13.Android编译问题
@@ -196,14 +169,11 @@
 
 
 ### 15.Android进程IPC
-- 常见的跨进程通信方式，AIDL的实现原理？AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
-- 说一下你对IPC机制的理解？如果一个APP里面有多进程存在，请列举你所知道的全部IPC方法……
-- 01.为什么会有Binder？不在同一个进程中的Activity和Service(比如把服务定义成一个独立进程)是如何通信的？
-- 02.Binder的设计思想是什么？多进程通信有哪些方式？为什么在Android系统中要是用Binder通信，有什么优缺点？
-- 03.进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？Binder中使用mmap是什么东西？
-- 04.既然有现有的IPC方式，为什么重新设计一套Binder机制呢。是否用Binder中mmap思想解决你的APP卡顿问题？
-- 05.Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？Binder内核所在的进程是如何找到到Server跟Client进行通信的？
-- Android有哪些跨进程通信，AIDL的代码实现？aidl平常使用有哪些注意点？
+- 跨进程：常见的跨进程通信方式，AIDL的实现原理？AIDL解决了什么问题？AIDL如何使用？多进程场景遇见过么？谈谈对进程共享和线程安全的认识……
+- Binder：为什么会有Binder？设计思想是什么？不在同一个进程中的Activity和Service(比如把服务定义成一个独立进程)是如何通信的？
+- Binder：进程通信有共享内存，管道，socket，消息队列。他们的原理大概都是什么样的？Binder中使用mmap是什么东西？
+- IPC：既然有现有的IPC方式，为什么重新设计一套Binder机制呢。是否用Binder中mmap思想解决你的APP卡顿问题？
+- Binder机制：ServiceManager什么时候注册的？这个是用来干嘛的？Binder内核所在的进程是如何找到到Server跟Client进行通信的？
 
 
 
