--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -78,12 +78,11 @@
 
 
 ### 05.大搜车项目问题汇总
-- 视频播放器：
-- 视频缓存：
+- 视频播放器：视频播放器是如何封装的？设计思路是什么？是如何设计架构分层？
+- 视频缓存：说一下边播边缓存的设计原理？具体是如何实现的？例如在快速滑动列表中是如何使用？
 - 视频优化：做过那些视频优化工作？是否有做过视频监控方案？播放性能优化是怎么做的？
 - 视频View：SurfaceView和TextureView有什么区别？它们绘制的原理是什么？那个性能更好，为什么？
-- 网络拦截助手：
-- 组件化通信：ARouter实现原理是什么？设计思路是什么？
+- 组件化通信：ARouter实现原理是什么？设计思路是什么？如何做降级处理？Apt是如何生成代码？
 
 
 
