--- a/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/12.TextureView深入学习.md
@@ -25,9 +25,12 @@
 
 ### 02.TextureView图形思路
 - TextureView如何执行View三大流程
-    - TextureView确实是跟着ViewRootImpl 绘制View 树时候的三大流程走。不过有一点不同的是，ViewRootImpl的draw流程时候，都是绘制在从ViewRootImpl中生成的Canvas中。但是TextureView并直接没有使用从上层传递下来的Canvas，而是通过TextureLayer绘制的。
+    - TextureView确实是跟着ViewRootImpl 绘制View 树时候的三大流程走。
+    - 不过有一点不同的是，ViewRootImpl的draw流程时候，都是绘制在从ViewRootImpl中生成的Canvas中。
+    - 但是TextureView并直接没有使用从上层传递下来的Canvas，而是通过TextureLayer绘制的。
 - 为何要开启硬件加速模式
-    - TextureView想要可以正常绘制，当前Activity必须要打开硬件渲染。因为这里面必须使用硬件渲染独有的Canvas DisplayListCanvas进行绘制。否则标志位没进来，TextureView跳过draw的方法就是背景色。
+    - TextureView想要可以正常绘制，当前Activity必须要打开硬件渲染。
+    - 因为这里面必须使用硬件渲染独有的Canvas DisplayListCanvas进行绘制。否则标志位没进来，TextureView跳过draw的方法就是背景色。
 
 
 
@@ -41,7 +44,7 @@
 #### 3.2 TextureView动机
 - 先说实际过程的应用场景
     - 在做视频相关业务需求时，有时候需要有复杂的动画效果，且要求在动画过程中不产生黑边。
-- 
+
 
 
 ### 04.TextureView设计
