--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -19,14 +19,14 @@
 - 内存专题：内存监控，内存治理，内存如何分配。内存泄漏怎么排查，平常有做过哪些内存优化相关的工作？
 - 启动专题：启动优化，页面打开优化，统计耗时。App启动过程有哪些优化？
 - 稳定性专题：稳定性优化，做了那些稳定性工作，hook疑难问题解决？
-- 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包
+- 安全专题：安全防御，挂载，xposed的工作原理。如何防抓包？
 - 图片专题：图片优化，大图检测，大图加载，图片加载流程，如何减少图片占用内存，图片圆角处理
 - OOM专题：OOM是如何产生，OOM场景，OOM如何优化，OOM排查思路，OOM是如何监控
 - FPS专题：通过invalidate说一下屏幕刷新机制？什么是流畅度？说一下Choreographer作用，VSYNC信号理解？FPS监控设计如何做？
 - UI优化：布局检测工具有哪些？如何统计布局的损耗？源码如何加载xml布局？布局卡顿优化
 - 进程专题：系统为什么会杀掉进程？进程回收优先级？app切换到后台后为什么容易被杀死？系统杀的为什么是我的进程，这是按照什么标准来选择的？
 - 线程专题：如何做线程优化？如何统一线程调用？有哪些可以做异步任务的方式？线程CPU排查，线程卡顿。
-- IPC专题：跨进程通信方案，AIDL是如何实现的？如何理解死亡代理，Binder机制，Binder流程原理
+- IPC专题：跨进程通信方案，AIDL是如何实现的？如何理解死亡代理，Binder机制，Binder流程原理。
 
 
 
@@ -78,21 +78,22 @@
 
 
 ### 05.大搜车项目问题汇总
-- 视频播放器：视频播放器是如何封装的？设计思路是什么？是如何设计架构分层？
+- 视频播放器：视频播放器是如何封装的？设计思路是什么？是如何设计架构分层？SurfaceView在子线程为何绘制UI不会卡顿？
 - 视频缓存：说一下边播边缓存的设计原理？具体是如何实现的？例如在快速滑动列表中是如何使用？
 - 视频优化：做过那些视频优化工作？是否有做过视频监控方案？播放性能优化是怎么做的？
 - 视频View：SurfaceView和TextureView有什么区别？它们绘制的原理是什么？那个性能更好，为什么？
 - 组件化通信：ARouter实现原理是什么？设计思路是什么？如何做降级处理？Apt是如何生成代码？
+- 视频：怎么获取视频第一帧？TextureView 相比 SurfaceView 性能如何，为什么性能还会下降，基于什么维度这样说？
 
 
 
 ### 06.一些技术输出问题
-- 组件化问题：
-- 磁盘工具：
-- 弱网模拟工具：
-- 通用存储方案库：
-- 日志打印：
-- ASM方法耗时分析：
+- 组件化问题：组件化同级module是如何通信的？
+- 磁盘工具：磁盘工具是怎么做的？解决了什么问题？
+- 弱网模拟工具：弱网判断条件是什么？如何去模拟弱网环境？弱网条件下做了那些优化操作？
+- 通用存储方案库：说一下通用存储方案是怎么做的？如何实现跨进程通信？各种存储方案是如何设计数据存储线程安全的？
+- 日志打印：日志打印库是如何设计存储file文件？如何跨进程写入数据设计？如何保证数据写入完整性？写入文件过大怎么处理？
+- ASM方法耗时分析：如何通过ASM实现方法耗时分析？函数耗时主要是什么导致的？字节码插桩的原理是什么？
 
 
 
