--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -49,10 +49,9 @@
 
 
 ### 02.View工作原理问题
-- requestLayout、invalidate与postInvalidate作用与区别，在requestLayout这个方法里面做了什么？
-- requestLayout，onLayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？
-- View是如何绘制到屏幕上的？View的刷新机制是什么，有哪些重要的方法？
-- Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
+- View刷新：requestLayout、invalidate与postInvalidate作用与区别，在requestLayout这个方法里面做了什么？
+- View刷新：requestLayout，onLayout，onDraw，DrawChild区别与联系？drawChild()是做什么用的？View是如何绘制到屏幕上的？
+- Canvas：Canvas.save()跟Canvas.restore()的调用时机？Canvas的底层机制，绘制框架，硬件加速是什么原理，canvas lock的缓冲区是怎么回事
 - View绘制流程，当一个TextView的实例调用setText()方法后执行了什么？请说一下原理……
 - 测量：如何理解View中的测量？子控件的测量依赖父布局约束吗？如何理解测量过程中的"递"和"归"的设计思想？
 - 测量：如何理解测量中布局MeasureSpec的设计？mode三种布局模式分别如何理解？mode和size的组成如何理解？
@@ -68,11 +67,11 @@
 
 
 ### 03.Android事件体系问题
-- 说一下两个手指缩放拖动大图是怎么实现的的思路？
-- 点击事件被拦截，但是想传到下面的View，如何操作？事件传递流程是什么？主要有哪些方法，请说一下这些方法的作用……
-- 事件分发流程。考察得最多，基本把整个分发流程讲清楚就好了；其次还会考察如何解决具体的冲突场景。
-- RecyclerView 滑动卡顿，请分析原因，并提供解决方案。TraceView 都能看到哪些成分？
-- 事件分发中的onTouch 和onTouchEvent 有什么区别，又该如何使用？事件传递流程和OnTouchListener的关系，那个先执行？
+- 事件分发流程：考察得最多，基本把整个分发流程讲清楚就好了；其次还会考察如何解决具体的冲突场景。
+- 事件体系设计思想：事件体系设计思想是什么？事件分发的本质？事件在哪些对象间进行传递？事件流程？
+- 事件拦截：点击事件被拦截，但是想传到下面的View，如何操作？事件传递流程是什么？主要有哪些方法，请说一下这些方法的作用……
+- 事件分发：事件分发中的onTouch 和onTouchEvent 有什么区别，又该如何使用？事件传递流程和OnTouchListener的关系，那个先执行？
+- 返回键事件：说一下返回键事件分发流程？如何从Native层传输到应用层，说一下事件传递的流程。
 
 
 
@@ -80,20 +79,16 @@
 - Handler工作流程：比如怎么唤醒主线程的，while为啥不会阻塞主线程。同步屏障。涉及到绘制优化、屏幕刷新机制等。
 - 阻塞唤醒原理：这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
 - 异步消息：说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
+- ThreadLocal：Handler为何用ThreadLocal？它是如何存储数据的？为何多线程需要使用到它？什么场景会用到ThreadLocal？
 
 
 
 ### 05.Android多线程问题
-- Android中为什么要使用多线程，说下多线程？
-- 静态同步锁与普通同步锁的区别？具体有哪些使用场景……什么导致线程阻塞？线程如何关闭？
-- java线程，场景实现，多个线程如何同时请求，返回的结果如何等待所有线程数据完成后合成一个数据
-- 如果我开了 18 个子线程，同时发送，并发的情况下如何保证消息及时性？
-- AsyncTask机制说一下……如何取消AsyncTask？并且它存在哪些不足？Asynctask对应的线程池是什么？
-- AsyncTask生命周期随着activity销毁而销毁吗？为什么？当activity屏幕出现旋转时，AsyncTask会出现什么情况？AsyncTask如何造成内存泄漏，有没有解决办法？AsyncTask执行是并行还是串行？
-- 你觉得使用 IntentService 和自己写一个异步加载有什么区别吗？
-- 线程池的核心参数。如果core为5，提交了三个任务，分别被三个线程执行了，其中一个任务提前执行完毕了，此时再提交一个任务，这个任务是如何执行的？
-- 线程池运行流程，你们平时怎么使用线程池？一个线程池够吗？
-
+- 多线程：Android中为什么要使用多线程，说下多线程？多个线程如何同步请求，返回的结果如何等待所有线程数据完成后合成一个数据？
+- 场景面试题：如果我开了 18 个子线程，同时发送，并发的情况下如何保证消息及时性？
+- AsyncTask：AsyncTask机制说一下……如何取消AsyncTask？并且它存在哪些不足？AsyncTask生命周期随着activity销毁而销毁吗？AsyncTask如何造成内存泄漏？
+- IntentService：你觉得使用 IntentService 和自己写一个异步加载有什么区别吗？IntentService原理是什么？
+- 场景面试题：线程池的核心参数。如果core为5，提交了三个任务，分别被三个线程执行了，其中一个任务提前执行完毕了，此时再提交一个任务，这个任务是如何执行的？
 
 
 
@@ -106,20 +101,18 @@
 
 ### 08.Android多媒体问题
 - 图片加载：怎么加载一张超大图？如何计算内存大小？加载大图如何避免OOM，平常是怎么压缩图片的？如何加载超高清大图，局部加载图片了解嘛？
-- 如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作
-- 从网络加载一个10M的图片，说下注意事项？如何预防OOM？如何计算一个Bitmap占用内存的大小，怎么保证加载Bitmap不产生内存溢出？
-- drawable。对比使用图片和drawable的好处，以及drawable的原理。不同文件展示会一样嘛？同样图片不同文件展示会一样嘛？
-- svg 为什么体积会比较小？为什么是可伸缩的？是否可以无损缩放？svg 是否可以放一张照片，为什么？
-- 假设现在让你实现图片上覆盖一个旋转角度 45 度 label，如何实现，列举你知道的方案。
-- Luban 压缩具体实现原理，可以自己写吗？Luban 压缩如何保证压缩的同时，图片质量还清晰？
-- 为什么限制在应用间共享文件？
+- 圆角：如何给控件的背景设置圆角。做图片圆角的原理是什么，平常有哪些优化操作？
+- Drawable：对比使用图片和drawable的好处，以及drawable的原理。不同文件展示会一样嘛？同样图片不同文件展示会一样嘛？
+- svg图片：svg 为什么体积会比较小？为什么是可伸缩的？是否可以无损缩放？svg 是否可以放一张照片，为什么？
+- Luban：压缩具体实现原理，可以自己写吗？Luban 压缩如何保证压缩的同时，图片质量还清晰？
+- 多媒体：为什么限制在应用间共享文件？作为进程间的共享相册文件，是如何进行跨进程读取的？
 
 
 
 ### 09.Android网络相关
-- 数据层有统一的管理么，数据缓存是怎么做的，http请求等有提供统一管理么？
-- 网络请求缓存处理，okhttp如何处理网络缓存的？
-- 服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？ 
+- 请求：数据层有统一的管理么，数据缓存是怎么做的，http请求等有提供统一管理么？
+- 缓存：网络请求缓存处理，okHttp如何处理网络缓存的？缓存拦截器中做了什么逻辑？
+- 数据有序：服务器只提供数据接收接口，在多线程或多进程条件下，如何保证数据的有序到达？ 
 - 网络请求：https请求如何保证安全性？Charles能抓https请求么？能抓的话那安全性在哪？app如何防止代理抓包？
 
 
