--- a/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/09.Flutter问题汇总.md
@@ -32,17 +32,22 @@
 - StatefulWidget：简单说一下生命周期？如果是在混合App中，前后台监听需要注意什么？
 - main入口：main()和runApp()函数在flutter的作用分别是什么？有什么关系吗？
 - Widget基础：什么是Widget? 在flutter里有几种类型的widget？分别有什么区别？介绍下Widget、State、Context 概念？
-- 三棵树：简述Widgets、RenderObjects 和 Elements的关系？
-- 状态管理：Flutter状态管理如何理解？
+- 三棵树：简述Widgets、RenderObjects 和 Elements的关系？三棵树是如何理解呢？
+- 状态管理：Flutter状态管理如何理解？Widget 频繁更改创建是否会影响性能？复用和更新机制是什么样的？
+- Element：RenderObjectElement，Element，它们有什么样的区别？各自有什么特点？
+
 
 
 
 ### 04.UI渲染和绘制问题
+- 绘制：build操作会做那些绘制操作？build之后之后怎么进行layout，paint操作？
 
 
 
 ### 05.其他一些技术问题
-- Hot作用：Hot Restart 和 Hot Reload 有什么区别吗？如何理解热重启和热重载？
+- Hot作用：Hot Restart 和 Hot Reload 有什么区别吗？如何理解热重启和热重载？它们的实现原理？
+- 数据传递：可以传递大数据吗？为什么要这样设计？
+- 跨端：比如说flutter跟原生效率更高一些？
 
 
 
