--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -88,7 +88,7 @@
 
 
 ### 06.一些技术输出问题
-- 组件化问题：组件化同级module是如何通信的？
+- 组件化问题：组件化同级module是如何通信的？如何进行业务的复用？
 - 磁盘工具：磁盘工具是怎么做的？解决了什么问题？
 - 弱网模拟工具：弱网判断条件是什么？如何去模拟弱网环境？弱网条件下做了那些优化操作？
 - 通用存储方案库：说一下通用存储方案是怎么做的？如何实现跨进程通信？各种存储方案是如何设计数据存储线程安全的？
