--- a/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
+++ b/Read/ReadMeWiki/05.智能硬件/03.TCP设备通信实践.md
@@ -308,6 +308,11 @@
 
 #### 4.5 数据的封包和解析
 - 如何解析数据
+    - 将二进制数据转化为实体packet数据。
+- 如何封包数据
+    - 组装packet数据体，然后将数据转化为io流二进制数据。
+
+
 
 
 #### 4.6 如何设计长链接
