--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -148,7 +148,7 @@
 - 核心线程：线程池核心线程数一般定义多少，为什么？核心线程可以销毁吗，为什么？
 - 线程池场景：说说几种常见的线程池及使用场景？线程池都有哪几种工作队列？怎么理解无界队列和有界队列？
 - 线程池复用：线程池复用原理是什么？是执行完成后销毁，再新建几个放那；还是始终是那几个线程？
-
+- 线程池设计：如何理解线程池是一种生产者&消费者模式？
 
 
 
