--- a/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/03.Android问题汇总.md
@@ -80,6 +80,7 @@
 - 阻塞唤醒原理：这里一般是会问为何loop()方法是死循环却不会占用cpu时间片 or 为何next()方法阻塞却不会卡死。更深一点会问到Linux的IO多路复用epoll原理。
 - 异步消息：说下handler的流程，异步消息是什么？Android中哪些场景会发送异步消息？我们在代码中可以手动发异步消息吗？
 - ThreadLocal：Handler为何用ThreadLocal？它是如何存储数据的？为何多线程需要使用到它？什么场景会用到ThreadLocal？
+- 消息机制：postDelay中是如何处理延迟消息的？如何阻塞挂起？
 
 
 
@@ -189,6 +190,14 @@
   
 
 
+### 18.性能测试
+- 客户端如何做测试？App压力测试如何做？
+- 客户端测试：FPS，内存，CPU
+    - CPU：
+    - FPS：
+    — 内存：腾讯profilerDog，打开开发者模式，可以收集app的内存，网络等数据。
+- 收集cpu数据
+    - 通过adb命令
 
 
 
