--- a/Read/ReadMeWiki/09.问题分析/05.网络相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/05.网络相关问题汇总.md
@@ -11,17 +11,27 @@
 
 
 ### 01.网络基础问题
-- 在浏览器中输入了一个链接，为什么会打开网页，然后看到图片，文字，这些东西是哪里来的？经历那些过程？
-- 在浏览器中输入非http类型链接，为何有的可以打开，有的打不开，对链接有何要求？
-- 为什么打开购物网站后，本来是打开我的收藏，但是去重定向到了首页登陆页面？
+- 请求过程：在浏览器中输入了一个链接，为什么会打开网页，然后看到图片，文字，这些东西是哪里来的？经历那些过程？
+- 协议：scheme协议是怎么设计的？在浏览器中输入非http类型链接，为何有的可以打开，有的打不开，对链接有何要求？
+- 重定向：为什么打开购物网站后，本来是打开我的收藏，但是去重定向到了首页登陆页面？
+- 应用层到传输层：http数据传递，会通过socket实现，说一下传输层的流程？tcp和udp实现有何特点？
+
 
 
 ### 02.IP地址问题
-- 域名是如何解析成ip地址？IP地址是唯一不变的？HttpDns的具体原理是什么？
+- ip解析：域名是如何解析成ip地址？IP地址是唯一不变的？HttpDns的具体原理是什么？
+- ipv4和ipv6：它们之间是什么联系？
+
 
 
 ### 03.网络请求流程
-- 在浏览器输入一个网址到网页显示出来有哪些经过？以看新闻，点外卖为案例说一下！
+- 请求流程：在浏览器输入一个网址到网页显示出来有哪些经过？以看新闻，点外卖为案例说一下！
+- Http包结构：如何设计请求报文？请求报文结构是怎样的？请求行，头部，主体分别包含那些内容？
+- Http包结构：响应包是如何设计的？响应包结构是怎样的？状态行，响应头部，响应主体分别包含那些内容？
+- 传输方式：常见Content-Type定义有哪些？普通文本，表单键值对，json数据等分别有何区别？
+- 请求方式：GET和POST请求有什么区别？Post请求可以保存为书签吗？它们数据安全是如何保障的？
+
+
 
 
 ### 04.Http协议问题
@@ -37,10 +47,11 @@
 
 
 ### 05.TCP和UDP问题
-- HTTP通信机制需要经历那些步骤？TCP和UDP有什么区别？
-- TCP 的 3 次握手和四次挥手，说一下这个过程？为什么不能两次握手呢？要三次？client如何确定自己发送的消息被server收到?
-- TCP可靠传输原理实现？如何TCP拥塞控制？TCP如何流量控制？
-- 什么是socket？socket选项 TCP NO DELAY 是指什么？Socket 工作在 TCP/IP 协议栈是哪一层？
+- 通信机制：HTTP通信机制需要经历那些步骤？TCP和UDP有什么区别？
+- 握手和挥手：TCP 的 3 次握手和四次挥手，说一下这个过程？为什么不能两次握手呢？要三次？client如何确定自己发送的消息被server收到?
+- TCP消息：TCP可靠传输原理实现？如何TCP拥塞控制？TCP如何流量控制？
+- Socket：什么是socket？socket选项 TCP NO DELAY 是指什么？Socket 工作在 TCP/IP 协议栈是哪一层？
+
 
 
 ### 06.网络其他问题
