--- a/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
+++ b/Read/ReadMeWiki/09.问题分析/00.项目工作技能问题.md
@@ -14,7 +14,7 @@
 - 组件化：module A 和 module B 之间有需要调用 Api 这块怎么解决的？module A 和 module B 之间如何通讯？
 - 崩溃专题：崩溃治理，崩溃监听，崩溃原理，以及捕获崩溃异常。崩溃降级。
 - ANR专题：ANR原理，信息收集，分析，监控，治理。造成ANR原因有哪些，如何解决的？
-- 卡顿专题：卡顿原因，卡顿监控，卡顿治理，说一下卡顿治理的优化措施
+- 卡顿专题：卡顿原因，卡顿监控，卡顿治理，说一下卡顿治理的优化措施。如何监控渲染卡顿？
 - 网络专题：网络优化，弱网，监控。如何抓包，放抓包处理等等，避免网络拦截
 - 内存专题：内存监控，内存治理，内存如何分配。内存泄漏怎么排查，平常有做过哪些内存优化相关的工作？
 - 启动专题：启动优化，页面打开优化，统计耗时。App启动过程有哪些优化？
@@ -47,11 +47,12 @@
 - HashMap：1.7，1.8的差异，1.8中什么情况下转换为红黑树，构造函数中参数代表的意思
 - GC过程：（判断对象是否存活，GC算法），垃圾回收机制，GC链路分析过程。
 - 注解：注解场景有哪些，分类，注解为何跟反射一起用。编译器和运行期注解框架如何设计？
+- 异常：为何设计异常，Error和Exception异常体系，异常处理机制是什么？异常捕获流程？异常性能分析？
 
 
 
 ### 03.作业帮项目问题汇总
-- 音视频通话：如何设计音视频业务？为什么说这块业务很复杂，复杂在哪里？
+- 音视频通话：如何设计音视频业务？为什么说这块业务很复杂，复杂在哪里？绘制架构设计图？
 - Socket概念：Socket是如何通信的？跟Http有何区别？数据传递性能如何？是否具有安全性？如何保证数据时效性？
 - Socket实践：Socket是如何使用的的？如何创建连接，读数据（接受）和写数据（发送）分别是怎么设计的？
 - Socket实践：读数据的时候，如何将io字节流转化为特定的tcp数据，拿到tcp数据后如何解析数据(解析成对应实体bean)？
@@ -59,7 +60,7 @@
 - Socket读写：如何理解Socket读写数据？如何处理读写异常逻辑？异常之后如何设计重新连接？那些情况会断开连接？
 - Socket数据：TcpPacket是如何设计的？消息的长度是不确定的，并且每条消息都有它的边界。我们如何来处理这个边界？
 - Socket数据：如何保证数据有序性？一个任务队列，执行任务，如何保证先取出的任务，执行结果需要先放入结果队列？
-- 缓存方案：Sp有何弊端？读取数据是否高效？如何设计线程安全？是否是增量刷新数据？
+- 缓存方案：Sp有何弊端？读取数据是否高效？如何设计线程安全？是否是增量刷新数据？mmap存储原理？
 - 缓存脏数据：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
 - 缓存设计：由于磁盘 IO 操作是耗时操作，因此框架有必要将支持多次磁盘 IO 操作聚合为一次磁盘写回事务，减少访问磁盘次数是如何设计？
 - App抓包：设计数据加密手段，sign签名，环境检测，CA证书校验，禁用代理，还有各种防抓包策略如何操作？
@@ -74,7 +75,7 @@
 - Flutter插件开发：如何做flutter插件开发？什么场景下使用？插件的设计思想是什么？
 - App状态监听：如何做App网络，GPS，定位，Wi-Fi等状态监听？广播监听的原理是什么？
 - 隐私合规：如何做隐私合规处理？如何处理权限合规？如何避免隐私API合规？如何做敏感信息控频优化？合规是如何测试？
-
+- APT：Apt的流程是怎样的？如何设计组件通信？绘制下apt工具的架构设计图？
 
 
 ### 05.大搜车项目问题汇总
