--- a/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/01.Java相关问题汇总.md
@@ -3,7 +3,6 @@
 - 01.基础问题汇总
 - 02.面向对象问题
 - 03.IO流知识问题
-- 04.数据结构问题
 - 05.异常处理问题
 - 06.线程知识问题
 - 07.并发知识问题
@@ -30,7 +29,7 @@
 
 ### 02.面向对象问题
 - 面向对象：面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
-- 封装：什么是封装？访问权限修饰符的作用是什么？
+- 封装：什么是封装？访问权限修饰符的作用是什么？举一个钱包的封装案例，说一下封装的作用？
 - 继承：继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
 - 多态：Java实现多态有哪些必要条件？具体怎么实现？多态的实现原理？多态的作用？
 - 重载与重写：重载（overloading）与重写（override）的区别？重载的方法能否根据返回类型进行区分？继承最大好处？构造器 Constructor 是否可被 Override？
@@ -45,23 +44,26 @@
 
 
 
+
 ### 03.IO流知识问题
-- 什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
-- File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？如何判断目录的存在？
-- 对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
-- 直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
-- 当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
-- 流一般需要不需要关闭，如果关闭的话在用什么方法，一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
-- 什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
+- Byte字节：什么是比特(Bit)，什么是字节(Byte)，什么是字符(Char)，它们长度是多少，各有什么区别？
+- File：File类型中定义了什么方法来创建一级目录？File类型中定义了什么方法来判断一个文件是否存在？如何判断目录的存在？
+- IO流：对文本文件操作用什么I/O流？对各种基本数据类型和String类型的读写，采用什么流？为了提高读写性能，可以采用什么流？
+- 缓冲Buffer：直接缓冲区与非直接缓冲器有什么区别？怎么读写 ByteBuffer？ByteBuffer 中的字节序是什么
+- 案例：当用System.in.read(buffer)从键盘输入一行n个字符后，存储在缓冲区buffer中的字节数是多少？
+- 流关闭：流一般需要不需要关闭，如果关闭的话在用什么方法，一般要在那个代码块里面关闭比较好，处理流是怎么关闭的，如果有多个流互相调用传入是怎么关闭的？
+- IO分类：什么是同步IO？什么是异步IO？什么是阻塞IO？什么是非阻塞IO？
 
 
 
 ### 05.异常处理问题
+- 异常体系：为什么要设置异常？Error和Exception有何区别？说一下它们各自的特点，可以举例场景来说明？
 - 异常关键字：Java语言如何进行异常处理，关键字：throws、throw、try、catch、finally分别如何使用？ 
 - 异常分类：什么是受检查的异常，什么是运行时异常？运行时异常与一般异常有何异同？简述一个你最常见到的runtime exception(运行时异常)？
 - finally：如果执行finally代码块之前方法返回了结果，或者JVM退出了，finally块中的代码还会执行吗？在什么情况下，finally语句不会执行？
 - try代码块：try里有return，finally还执行么？那么紧跟在这个try后的finally{}里的code会不会被执行，什么时候被执行，在return前还是后？
-- 异常：Exception和Error有什么区别？运行时异常与一般异常有什么区别？
+- catch：一旦某个catch捕获到匹配的异常类，其它的catch还会执行吗？catch异常匹配是如何执行？
+- 异常：Exception和Error有什么区别？运行时异常与一般异常有什么区别？不要生吞异常？
 - 异常捕获：try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
 - 异常性能：try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
 
@@ -137,7 +139,6 @@
 - 注解作用：注解起到什么作用？注解有哪些？写过注解吗？比如分析下butterKnife在bind()时的原理……注解如何实现一个findViewById
 - 注解分类：编译器注解和运行期注解使用场景有哪些？说一下编译期注解实践的场景？运行时注解：retrofit；编译时注解：EventBus
 - 注解实践：注解如何获取，反射为何耗性能？了解动态注解吗，说一下Retrofit网络加载框架是如何进行动态注解的？
-
 
 
 
