--- a/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/01.综合专项/00.杨充个人简历.md
@@ -1,5 +1,6 @@
 ### 目录介绍
 - 1.个人简介
+- 2.核心优势
 - 2.工作经历
 - 3.专业技能
 - 4.个人评价
@@ -9,13 +10,19 @@
 
 
 ### 1.个人简介
-- 姓名：杨充【30岁】
+- 姓名：杨充【30岁】，现所在地北京
 - 电话：13667225184
 - 邮箱：yangchong211@163.com
 - GitHub：https://github.com/yangchong211
 - 目前工作情况：在职状态(作业帮智能硬件-中台Android组)
 - 技术项目和博客：GitHub项目20k以上star，follower2k以上，发表博客150多篇。
 
+
+
+### 2.核心优势
+- 1.专注Android领域（7年多，含1年Flutter经验）做过作业帮智能App(从0到1)、滴滴外卖(跨端)、一鹿有车(百万级)，具备独立开发能力，有带团队经验；
+- 2.有多款app性能调优经验，注重代码规范和业务高可用；关注新技术并持续学习实践，有个人技术博客和开源项目；
+- 3.
 
 
 ### 2.工作经历
