--- a/Read/ReadBlogWiki/07.底层思维/09.情商能力的学习.md
+++ b/Read/ReadBlogWiki/07.底层思维/09.情商能力的学习.md
@@ -9,7 +9,7 @@
 - 08.情绪共情三部曲
 - 09.愤怒指标仪测试
 - 10.设置情绪管理角
-- 11.今天起改变三点
+- 11.情绪记录的模版
 - 12.课后作业思考下
 
 
@@ -135,7 +135,8 @@
 
 ### 07.如何去管理情绪
 #### 7.1 不压抑：疏比堵重要
-- 遇到自己有负面情绪时，千万不要脱口而出“不要伤心”“不许悲观”“不要低落”。因为负面情绪如果不抒发出来，它永远在那里，疏比堵更重要。可能当下你说“不要伤心”，自己难受就憋回去了，但这些负面情绪并没有得到疏导，会累积在心里，日积月累，就会用更加严重的形式反映出来。
+- 遇到自己有负面情绪时，千万不要脱口而出“不要伤心”“不许悲观”“不要低落”。因为负面情绪如果不抒发出来，它永远在那里，疏比堵更重要。
+- 可能当下你说“不要伤心”，自己难受就憋回去了，但这些负面情绪并没有得到疏导，会累积在心里，日积月累，就会用更加严重的形式反映出来。
 
 
 
@@ -189,16 +190,16 @@
 
 
 
+### 11.情绪记录的模版
+- 背景说明：当时的情绪是什么？什么事情触发了情绪？事后回忆碎片，当你开始观察情绪、接纳情绪时，已经过去多久了？
+- 重新归因：了解情绪的背景后，找到其本质的原因。
+- 解决问题：为解决问题付出的行动，具体做了那些事情，效果如何？
+- 反馈优化：行动后的反馈优化建议，总结一下主要是为了后期做的更好。
+
+
 ### 12.课后作业思考下
 - 回顾总结，生活工作中，最容易让你情绪失控的“触发点”是什么？今后可以如何预防？
 - 面对别人伤心或者负面情绪，之前你做得最不好的是哪一个环节？今后可以如何提高？
-- “爱自己的基本功就是照顾身体，照顾情绪和管理情绪。“
-    - *当时的情绪是什么?
-    - *什么事情触发了情绪？
-    - *当你开始观察情绪、接纳情绪时，已经过去多久了？
-- 重新归因  Reasons
-    - 为解决问题付出的行动  Actions
-    - 行动后的反馈优化  Optimizations
  
  
   
