--- a/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题分析/06.数据结构问题汇总.md
@@ -57,19 +57,23 @@
 
 
 ### 15.常用数据结构
-- 数组：在java中，声明一个数组过程中，是如何分配内存的？如何实现数组逆置？如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？
-- fail-fast：什么是Java集合的快速失败机制 “fail-fast”？单线程迭代器遍历移除会“fail-fast”吗？多线程如何解决这种异常？
-- List集合：ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
-- Array：Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
-- LinkedList： 它是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
-- Set集合：HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？
-- Set集合：Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别？集合Set实现Hash怎么防止碰撞？
-- HashMap：HashMap的实现机制，底层数据结构是什么？如果Hash冲突了怎么解决？HashMap的put方法的具体流程？怎么样HashMap线程安全？
-- HashMap：HashMap扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
-- HashMap：为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
-- ConcurrentHashMap：ConcurrentHashMap的具体实现知道吗？如何实现高效地线程安全？如何实现分段锁？
-- TreeMap：TreeMap 是采用什么树实现的？TreeMap、HashMap、LandedHashMap的区别。
-- LinkedHashMap：它是如何实现有序？它是如何实现淘汰数据的？put和get分别做了什么操作？
+- 数组
+    - 数组：在java中，声明一个数组过程中，是如何分配内存的？如何实现数组逆置？如何权衡是使用无序的数组还是有序的数组？怎么判断数组是 null 还是为空？
+- List集合
+    - fail-fast：什么是Java集合的快速失败机制 “fail-fast”？单线程迭代器遍历移除会“fail-fast”吗？多线程如何解决这种异常？
+    - List集合：ArrayList和LinkedList的区别？为什么说LinkedList 在插入和删除数据时效率更高？有没有在优化的可能？
+    - Array：Array 和 ArrayList 有什么区别？什么时候该应 Array 而不是 ArrayList 呢？
+    - LinkedList： 它是单向链表还是双向链表？链表有什么样的特点？插入数据时，ArrayList, LinkedList, Vector谁速度较快？为什么？
+- Set集合
+    - Set集合：HashSet是如何保证数据不可重复的？HashSet和TreeSet有什么区别？TreeMap和TreeSet在排序时如何比较元素？
+    - Set集合：Set 里的元素是不能重复的，那么用什么方法来区分重复与否呢？是用 == 还是 equals()？ 它们有何区别？集合Set实现Hash怎么防止碰撞？
+- Map集合
+    - HashMap：HashMap的实现机制，底层数据结构是什么？如果Hash冲突了怎么解决？HashMap的put方法的具体流程？怎么样HashMap线程安全？
+    - HashMap：HashMap扩容操作是怎么实现的？是怎么解决哈希冲突的？HashMap为什么不直接使用hashCode()处理后的哈希值直接作为table的下标？
+    - HashMap：为什么HashMap中String、Integer这样的包装类适合作为K？如果我想要让自己的Object作为K应该怎么办呢？
+    - ConcurrentHashMap：ConcurrentHashMap的具体实现知道吗？如何实现高效地线程安全？如何实现分段锁？
+    - TreeMap：TreeMap 是采用什么树实现的？TreeMap、HashMap、LandedHashMap的区别。
+    - LinkedHashMap：它是如何实现有序？它是如何实现淘汰数据的？put和get分别做了什么操作？
 
 
 
