--- a/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
+++ b/Read/ReadAndroid/01.大型方案/23.ProtoBuf-gRPC实践.md
@@ -1,8 +1,82 @@
 #### 目录介绍
+- 01.网络请求库背景
+    - 1.1 网络库的大背景
+    - 1.2 网络库的对比
+    - 1.3 网络库收益分析
+- 02.ProtoBuf的介绍
+    - 2.1 ProtoBuf是什么
+    - 2.2 ProtoBuf和json
+
+    - 2.4 ProtoBuf的不足
+- 03.gRPC实践的介绍
+    - 3.1 gRPC简单介绍
+    - 3.2 为何要用gRPC
+    - 3.2 gRPC如何使用
+    - 3.3 gRPC通信方式
+    - 3.4 gRPC通信流程
+    - 3.5 gRPC通信注意点
+- 04.gRPC通信原理
+    - 4.1 gRPC通信技术点
 
 
 
 
+### 01.网络请求库背景
+#### 1.1 网络库的大背景
+
+
+#### 1.2 网络库的对比
+
+
+#### 1.3 网络库收益分析
+
+
+
+### 02.ProtoBuf的介绍
+#### 2.1 ProtoBuf是什么
+- ProtoBuf简单介绍
+    - 它是Google公司发布的一套开源编码规则，基于二进制流的序列化传输，可以转换成多种编程语言，几乎涵盖了市面上所有的主流编程语言，是目前公认的非常高效的序列化技术。
+- ProtoBuf的Github主页：
+    - https://github.com/protocolbuffers/protobuf
+
+
+#### 2.2 ProtoBuf的优势
+
+
+#### 2.3 ProtoBuf核心原理
+
+
+#### 2.4 ProtoBuf的不足
+
+
+
+### 03.gRPC实践的介绍
+#### 3.1 gRPC简单介绍
+- gRPC的简单介绍
+    - gRPC是一个高性能、开源和通用的RPC框架，面向移动和HTTP/2设计。目前提供C、Java和Go语言版本，分别是grpc、grpc-java、grpc-go。
+    - gRPC基于HTTP/2标准设计，带来诸如双向流、流控、头部压缩、单TCP连接上的多复用请求等特性。这些特性使得其在移动设备上表现更好，更省电和节省空间占用。
+    - gRPC由google开发，是一款语言中立、平台中立、开源的远程过程调用系统。
+- gRPC(Java)的Github主页：
+    - https://github.com/grpc/grpc-java
+
+
+
+#### 3.2 为何要用gRPC
+- 为什么要使用ProtoBuf和gRPC
+    - 简而言之，ProtoBuf就好比信息传输的媒介，类似我们常用的json，而grpc则是传输他们的通道，类似我们常用的socket。
+
+
+#### 3.2 gRPC如何使用
+
+
+#### 3.3 gRPC通信方式
+
+
+#### 3.4 gRPC通信流程
+
+
+
+#### 3.5 gRPC通信注意点
 
 
 
